--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/cardb
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url = ${OPENSHIFT_MYSQL_DB_HOST}:${OPENSHIFT_MYSQL_DB_PORT}/cardb
+spring.datasource.username = ${OPENSHIFT_MYSQL_DB_USERNAME}
+spring.datasource.password = ${OPENSHIFT_MYSQL_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
