--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-
-spring.datasource.url = ${OPENSHIFT_MYSQL_DB_HOST}:${OPENSHIFT_MYSQL_DB_PORT}/cardb
-spring.datasource.username = ${OPENSHIFT_MYSQL_DB_USERNAME}
-spring.datasource.password = ${OPENSHIFT_MYSQL_DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url= jdbc:postgresql://localhost:5432/cardb
+spring.datasource.username= postgres
+spring.datasource.password= password
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
