Update application properties and cross origins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/cardb
-spring.datasource.username= postgres
-spring.datasource.password= password
+spring.datasource.url = jdbc:postgresql://${POSTGRES_HOSTNAME}:${POSTGRES_PORT}/${POSTGRES_DATABASE}
+spring.datasource.username = ${POSTGRES_USERNAME}
+spring.datasource.password = ${POSTGRES_PASSWORD}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
